Closed
Bug 772296
Opened 13 years ago
Closed 13 years ago
3D animation text disappears during animation
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla17
People
(Reporter: alice0775, Assigned: mattwoodrow)
References
()
Details
(Keywords: regression)
Attachments
(3 files)
1.70 KB,
text/html
|
Details | |
3.08 KB,
patch
|
roc
:
review+
akeybl
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
759 bytes,
text/html
|
Details |
Build Identifier:
http://hg.mozilla.org/releases/mozilla-aurora/rev/a45c99cca5e5
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/20120709 Firefox/15.0a2 ID:20120709042008
Spun off from Bug 771180.
Steps to Reproduce:
1. Prepare a new profile
2. Open URL or testcase.html
-- observe 3d text
Actual Results:
3D animation text disappears during animation
Expected Results:
Should not
Reporter | ||
Comment 1•13 years ago
|
||
Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/1e2b674b6ba9
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120511112347
Bad:
http://hg.mozilla.org/mozilla-central/rev/176f396a1293
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120511113950
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=1e2b674b6ba9&tochange=176f396a1293
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/b9c3d700625a
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120510191731
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/15d1960c419e
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/15.0 Firefox/15.0a1 ID:20120511004931
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=b9c3d700625a&tochange=15d1960c419e
Triggered by: 287dc7b3152b Matt Woodrow — Bug 722603 - Improve dirty rect calculation with 3d transforms and preserve-3d. r=roc
Assignee: nobody → matt.woodrow
Updated•13 years ago
|
Comment 2•13 years ago
|
||
This appears now in FF15, FF16 and FF17 where as it does not in FF13 or FF14.
any news on this?
Assignee | ||
Comment 3•13 years ago
|
||
We already used this code for Preserve3D(), I'm not sure why it was ever limited to that, since the same problem exists for both paths.
Attachment #645927 -
Flags: review?(roc)
Assignee | ||
Comment 4•13 years ago
|
||
Comment on attachment 645927 [details] [diff] [review]
Forward transform the overflow rect
Review of attachment 645927 [details] [diff] [review]:
-----------------------------------------------------------------
::: layout/generic/nsFrame.cpp
@@ +1779,5 @@
> dirtyRect = GetVisualOverflowRectRelativeToSelf();
> } else {
> + // Trying to back-transform arbitrary rects gives us really weird results. I believe
> + // this is from points that lie beyond the vanishing point. As a workaround we transform t
> + // he overflow rect into screen space and compare in that coordinate system.
Fix line break in "t he"
Attachment #645927 -
Flags: review?(roc) → review+
Assignee | ||
Comment 6•13 years ago
|
||
Comment 7•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
Comment 8•13 years ago
|
||
(In reply to Ed Morley [:edmorley] from comment #7)
> https://hg.mozilla.org/mozilla-central/rev/5ee7f05cfeff
Am I correct understanding that this fix for the bug will not appear until FF17?
which IMHO doesn't make sense as it occurs in FF15 and FF16 as well.
Now since the bug doesn't present itself in FF14 one would while it does in 15, 16 one have to wait til FF17 is released
IMHO it isn't resolved or fixed when 15 ans 16 are still affected by the bug
Comment on attachment 645927 [details] [diff] [review]
Forward transform the overflow rect
Review of attachment 645927 [details] [diff] [review]:
-----------------------------------------------------------------
I think we should take this on Aurora, since we're unprefixing CSS transforms there and the patch is pretty safe (doesn't introduce any new code paths).
I don't think we need to take this on Beta though.
Attachment #645927 -
Flags: approval-mozilla-aurora?
(In reply to Willie Meier from comment #8)
> Am I correct understanding that this fix for the bug will not appear until
> FF17?
> which IMHO doesn't make sense as it occurs in FF15 and FF16 as well.
If it gets approved for Aurora it will appear in FF16.
> IMHO it isn't resolved or fixed when 15 ans 16 are still affected by the bug
RESOLVED FIXED means fixed in nightly builds. That is how our process works.
Comment 11•13 years ago
|
||
Comment on attachment 645927 [details] [diff] [review]
Forward transform the overflow rect
[Triage Comment]
Firefox 15 regression, but we don't expect this to have significant impact in that version. Approving for Aurora 16, where we've done a lot of CSS unprefixing.
Attachment #645927 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 12•13 years ago
|
||
Updated•13 years ago
|
status-firefox15:
--- → affected
status-firefox16:
--- → fixed
Updated•13 years ago
|
QA Contact: jbecerra
Comment 13•13 years ago
|
||
(In reply to Alice0775 White from comment #13)
> Created attachment 640445 [details]
> testcase.html
>
> Build Identifier:
> http://hg.mozilla.org/releases/mozilla-aurora/rev/a45c99cca5e5
> Mozilla/5.0 (Windows NT 6.1; WOW64; rv:15.0) Gecko/20120709 Firefox/15.0a2
> ID:20120709042008
>
> Spun off from Bug 771180.
>
> Steps to Reproduce:
> 1. Prepare a new profile
> 2. Open URL or testcase.html
> -- observe 3d text
>
> Actual Results:
> 3D animation text disappears during animation
>
> Expected Results:
> Should not
IMHO, it isn't fixed referring to FF16, FF17 as stated.
May I suggest that you visit www.starbase-alpha.com with FF14 then run FF16 and then run FF17 you'll notice the difference. The behavior of FF16/FF17 is similar or identical.
FF16/FF17 are partially fixed yet its behavior is not that of FF14. The flow is quite different between FF14 and 16/17
Has something else changed that I am not aware as it relates to the specs?
The base ref is FF14.0.1 as something must have changed which which appears to have been carried over to the other versions 15, 16,17.
Would not fixing 15 first which is the next release and then apply to 16 and 17 makes logical sense to me(fix the start rather than the end or middle).
This issue does/did not happen in Chrome/Safari
(In reply to Willie Meier from comment #13)
> May I suggest that you visit www.starbase-alpha.com with FF14 then run FF16
> and then run FF17 you'll notice the difference. The behavior of FF16/FF17
> is similar or identical.
>
> FF16/FF17 are partially fixed yet its behavior is not that of FF14. The
> flow is quite different between FF14 and 16/17
That site looks identical in Nightly (FF17) and Chrome, to me. If you think there is something wrong with Nightly's behavior, please file a new bug for that.
Comment 15•13 years ago
|
||
Removing tracking for 15, setting to wontfix since we're not landing this to Beta.
You need to log in
before you can comment on or make changes to this bug.
Description
•