Bug 772296 - Forward transform the overflow rect when computing dirty rects for 3d transforms. r=roc